turing-talos/apps/personal-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-external
  tls:
  - secretName: personal-blog-certs
    hosts:
    - lennart.jern.fi
  rules:
  - host: lennart.jern.fi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-blog
            port:
              name: http
